<resources>
    <string name="app_name">Bombo</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="aya">Aya</string>
    <string name="mom_and_dad">Mom and Dad</string>
    <string name="aunt_amal">Aunt Amal</string>
    <string name="bombo">Bombo</string>
    <string name="intro_head_line"> ايه هو الحب؟؟ </string>
    <string name="home">Home</string>
    <string name="intro_body">ويكيبيديا بيقول ان الحب هو خليط من مشاعر وتصرفات مختلفة زي التعلق الشخصي او الاستمتاع بشئ معين زي الاكل اللي بتحبه مثلا او الشعور بالانجذاب القوي ناحية شئ او شخص معين . لحد هنا والكلام معقول . اللي مش معقول بأه انهم بيقولوا ان الحب بيسهل العلاقات الشخصية بين الافراد . الجزء الاخير ده انا بشكل شخصي مش مقتنع بية .. الحب ساعات بيكون سبب من اسباب تعقيد العلاقة مش تسهيلها.. كنت بسأل نفسي كتير هو في حاجة فعلا تستاهل انك تكون بتحب شخص وانك تكون فعلا عايز تعمل اي حاجة تسعده حتي لو انت عايز تعمل حاجة تانية ولا ده بس بيكون عشان حتسعد روحك انت كمان معاه.. كلها تساؤلات ساذجة من شخص ملوش في اي حاجة من الحاجات دي والعياذ بالله وكان برضه من اكبر مخاوفي ان عدم خبرتي ده يكون سبب في اني اقع علي بوذي مع اول حد احاول ارتبط بيه.. وهو ما كان.. بعد الحاح من كل اللي حواليا تقريبا قررت اني ابدأ اخوض تجربة الارتباط وبدأت محاولات محمومة من كل الاطراف عشان نلاقي بنت الحلال اما رغبة منهم عشان يفرحوا بيا او فيا معرفش .. وفي كافتيريا العروسة كان اللقاء مش عايز احكي طبعا عن حجم الانبهار اللي كان في عينيها وهي مش قادرة تنزل عينيها من عليا ولا عن ضحكتها اللي مكانتش بتفارق وشها ده طبعا كان شئ طبيعي ومتوقع و.. وكفاية كدب وقرع لحد كده … المقابلة كانت شبة عادية وتقريبا مبصتش عليا خالص والمفروض ان انا اطلب اننا نقوم ونقعد مع بعض عشان نتعرف علي بعض وساعتها نزل عليا سهم الله وفي الاخر قلت مابدهاش بقى وشجعت نفسي وتوكلت على الله انا حيحصلي ايه يعني .. اخدت نفس عميق وقلت لبنت خالتي تطلب هي منهم اننا نقعد مع بعض .. الشجاعة مفيش احسن منها علي فكرة قمنا وروحنا قعدنا لوحدنا وبدأنا نتكلم .. في الاول كانت خايفة وتقريبا قاعدة علي ايد الكرسي كان هدفي ساعتها حاجتين الاولي اني اهديها واطمنها والتانية انها تشوف الشخص اللي قدامها علي طبيعته من غي زواق.. في البداية بدأت اتشد للعفوية اللي في كلامها واحده واحده بدأنا.. مش عايز احرق القصة كلها هنا المهم هنا ان انا اقول اني ممكن اعمل اي حاجه و اتعلم اي حاجة عشانك .. ممكن اتعلم برمجة عشان بس اعمل برنامجك يقولك اد ايه انا بحبك وعشان يوثق المرحلة دي من حياتنا وكمان عشان أقول شكرا..شكرا لكل واحد كان السبب في اني بعيش اسعد ايام حياتي .. واهم من كل شئ هو اني اقول … بحبك.</string>
    <string name="mom_headline">أم وأب تانيين</string>
    <string name="mom_sub_headline">اهل الطيبة والحنية والاصل الطيب</string>
    <string name="mom_body">أول ناس لازم نشكرهم طبعا لازم يكونوا الناس اللي ربنا جعلهم سبب في وجودنا اصلا .. هما دول الناس الوحيدة اللي فعلا فعلا مش عايزين حاجة غير انك تكون احسن منهم في كل شئ انا مش حقدر اقول شكرا بأه والكلام ده لأن الكلمة قليلة اوي وملهاش أي معني جنب اللي عملوه أنا بس عايز أقول وحده بس اللي يقدر يجزيكوا عنا باللي تستحقوه .. ربنا يخليكوا لينا وتفضلوا منورين حياتنا ببركة وجودكوا فيها … أمي وأبويا دول مفهوم إن هما يكونوا حنينين و عايزين يدوني عنيهم إنما اللي بجد عايز أتكلم عنه هو إن ربنا يحبك لدرجة إنه يرزقك بأب وأم تانين بنفس الطيبة والأصل الطيب إنه يخليك تحبهم زي أبوك وأمك بالظبط .. يمكن ده عشان ربنا جعلهم السبب فى وجود نصك التاني في الحياة او عشان حسيت بإنهم مش عايزين حاجة غير إنهم يطمنوا على بنتهم مع حد بيحبها .. ربنا يقدرني وأكون أحسن مما تتمنوا كمان أحط الأمانة دي في عيني من جوا وبما إني بحاول اوثق الذكرى الجميلة دي فأحب أقول إنه كان من أكتر الأسباب اللي شجعتني أورح المقابلة دي هو حجم الكلام الجميل اللي نهال كانت بتوصفهم بيه واللي فعلا حسيت إنه مش مبالغة خالص بمجرد ما شفت أمي التانيه في أول مقابلة لينا .. أما بالنسبة لبابا فأنا كنت خايف ومرتبك أنا رايح أقابله بس بمجرد ما قابلته وأتكلمنا حسيت بمزيج من الراحة والإحترام .. راجل علي الرغم من التحدي الصحي بس بيته وأهله عنده رقم واحد ورغبته في أنه يطمن علي بنته مع واحد يحبها وياخد باله منها تغلب أي شئ تاني ده غير أنه طلع معرفة قديمة وده وفر علينا وعليه مسافة طويلة… الحمد لله أنه رزقني بأب وأم تانيين أفتخر بيهم زي أبويا وأمي بالظبط ربنا يقدرني وأكون ابن ثالث ليكوا .. كان لازم أنتوا تبقوا أول ناس مع أبويا وأمي أقولكم .. شكراً.</string>
    <string name="mom_1">ده اليوم اللي بقى عندي فيه اب وام جداد </string>
    <string name="mom_2">بابا وخوخة</string>
    <string name="mom_3">بركتنا</string>
    <string name="mom_4">تعرف تقول مين العروسة ؟؟</string>
    <string name="mom_5">والله احلى ناس</string>
    <string name="mom_6">ست الكل</string>
    <string name="mom_7">قمرين منورين الفرح والله</string>
    <string name="mom_8">العريس والعروسه</string>
    <string name="mom_9">بتتقفل ازاي دي ؟؟</string>
    <string name="aunt_headline">امي من قبل امي</string>
    <string name="aunt_sub_headline">معني انك تبقي اجدع وارجل من 100 راجل</string>
    <string name="aunt_body">الحياه ساعات بتبقي صعبة.. ساعات ربنا بيكتب لينا فيها تحديات كبيرة اوي ومن اصعب التحديات واشدها وخصوصا في مجتمعنا ده هو تحدي المسئولية عن اطفال بالنسبة لست مبتشتغلش ربنا اختار جوزها عشان يبقي جنبه .. تحدي ممكن يقسم وسط اي ست وخصوصا لو كان الاطفال دول بنات ساعتها المسئولية بتبقي الضعف .. نقدر نقول بمنتهي الحياد ان نجاح الست دي في انها تربي بناتها تربية سليمة وتعلمهم وتعفهم عن سؤال الناس مهما كان درجة قرابتهم ده في حد ذاته نجاح كبير وخصوصا مجتمع زي مجتمعنا ده لكن الشئ اللي يستحق الوقوف قدامه شويه هو ان الست دي مش بس تنزل من بيتها وتواجه الحياه بكل البلاوي اللي فيها وتربي عيالها لا دي كمان تحافظ علي المستوي اللي هما عايشين فيه وترتقي بيه وتحاول في كل مجالات الحياه تقريبا بمثابرة غريبة ومرهقة جدا للمتابع ليها فما بالك بيها هي شخصيا .. نموذج من نماذج النجاح اللي بتضايقني انا شخصيا الصراحة عشان الواحد جنبها بيحس اد ايه هو انسان تافه ومش عارف يحقق اي حاجه … يالا ما علينا ..علي المستوي الشخصي بأه الذكريات معاها بتبتدي من اللفه تقريبا ذكريات اكبر واكتر من انها تتحكي سواء معاها او مع بناتها اللي سبحان الله واخدين نفس الطيبة والهدوء والاستكانة تحسهم كلهم بلسم كده ماشاء الله … جينيا هما اخواتي (ولاد خالة وولاد عم) .. لزقة امريكاني يعني و الاتنين ماشاء الله علي العقل والرزانة والاخلاق الحميدة وقبل ما نوصل لمرحلة حميدة دي تبقي مين بالظبط .. وده طبقا للتعبير المتوقع اسمعه منهم مع صوت اسكندراني لطيف احب اقول ان الاتنين انسب وصف ليه(قلب ابيض من الحليب ولسان امر من الصبر) .. ناس كمل يعني الصراحة.. أما بالنسبة لعلي بأه فده عايز يوم من اول النهار بأه .. شخص تتجسد فيه مقولة{يمهل ولا يهمل} تحس انه عمل مصيبه في حياته وعشان ربنا بيحبه فقرر يكفرها عنه في الدنيا شخص فيه طيبة الدنيا وجدع ومحترم و ابن ناس و … و ظابط (بناكل عيش) أما عن أحدث افراد الأسرة فحدث ولا حرج .. المثال العملي برضه عل ان مقولة {حيطلعلك في عيالك} دي مش جاية من فراغ اقرب وصف ليه هو الرز باللبن اللي بالقشطة والعسل .. حاجة تجزع يعني بصراحة بس مش ممكن تشبع منها زائد انه شبهي يعني كده خلاص مستقبله واضح .. نرجع بأه للزغلول الكبير واللي زي ما كانت بتغيرلي البامبرز وانا صغير فهي برضه اللي قررت انها تلاقي حد يقبل بيا وعلي صعوبة المهمة دي بس كعادتها في تحقيق اهدافها مسابتنيش الا ما كانت السبب في اني الاقي نصي التاني وده عن طريق اختي اللي طلعت بيها من الدنيا واللي محتاجة برنامج لوحدها دي واللي من حسن حظي انها كانت مصاحبة البنت اللي حظها الجميل وقعها فيا … زي ما أنتوا كلكوا ليكوا مكان خاص جدا جدا جدا جوايا فلازم وان كنت مش عارف ازاي … اقولكم شكراً</string>
    <string name="aunt_1">المعلم الكبير واول عيد ميلاد ليا من سنييين</string>
    <string name="aunt_2">ابني الروحي في يوم من اجمل ايام حياتي</string>
    <string name="aunt_3">سندويتش كبده عند الفلاح في اسكندرية</string>
    <string name="aunt_4">تحس اللي في النص ده برنس كده</string>
    <string name="aunt_5">دي كنا متصورينها عشان نغيظ الزبون</string>
    <string name="aunt_6">اول يوم في اسكندرية</string>
    <string name="aunt_7">مش عارف بتشاور عليا ليه؟؟</string>
    <string name="aunt_8">اول واحد يتعلم سواقة قبل ما يتعلم مشي</string>
    <string name="aunt_9">ايه الضحكة دي ؟؟</string>
    <string name="aunt_10">طبعا الضحكة مش محتاجة تعليق</string>
    <string name="aunt_11">ربنا يخليكوا لبعض </string>
    <string name="aya_headline">فنان ببالطو دكتور</string>
    <string name="aya_sub_headline">منافسي الوحيد</string>
    <string name="bombo_headline">البمبو</string>
    <string name="bombo_sub_headline">سبب فرحتي ونور حياتي</string>
    <string name="bombo_body">لازم كلنا نعترف بحاجه مهمه حتي لو مش عاجبانا .. الست ليها علينا تاثير غريب لو كنت بتحبها لدرجة إنك بيكون عندك استعداد تعمل لها اي حاجة عشان تشوف الفرحة في عنيها .. يوم 22/2 انا كنت علي ميعاد مع حاجة مهمة جدا .. مهمة لدرجة إنها فعلا حتشقلب حياتي ده اليوم اللي رحت فيه اقابل الانسانة اللي بتمني من كل قلبي تعيش معايا العمر كله .. بصراحة يومها أنا كنت متوتر وخايف .. متوتر لإنها تجربة جديدة بالنسبة ليا وخايف اني معرفش أقيم الوضع كويس وصراحةً الموضوع وقتها كان عملي بحت واحد بيدور علي عروسة ورايح يشوفها وبالفعل رحنا وقعدنا شوية مع أمي و أمها وبنت خالتي ومش حعيد حاجات أنا قلتها في الاول المهم بجد اننا لما قمنا وقعدنا عشان نتكلم حسيت منها بنوع من الخوف ومعاه حسيت برغبة كبير ة أوي اني اطمنها وبمجرد ما الأفكار دي بدأت تيجي في بالي حسيت بالتوتر اللي عندي بيخف واحده واحده زي ما يكون رغبتي في تطمينها بتطمني انا كمان وبدأنا نتكلم وهي كانت تقريبا ساعتها عايزة تقوم وتجري .. حسيت ساعتها بتلقائية وعفوية أسرتني بصراحة وحاولت أخليها تتكلم عشان تخرج من الحالة اللي هي فيها دى وإحنا بنتكلم ضحكت .. الموضوع بجد مفيهوش أي نحنحة أو سهوكة أو ما شابه بس والله العظيم ضحكتها فرحتني ومتمالكتش نفسي الا وانا بقولها إن ضحكتها حلوة بجد … إتكلمنا و إتكلمنا والوقت عدا وفي حوالي اتنين او ثلاثة زي حالتنا كده قعدوا وقاموا و إحنا قاعدين مش حاسيين بالوقت … ساعة ونص عدت زي ما تكون خمس دقايق وبعدها قمنا و كل واحد روح بيته مقدرش انكرها ان ساعتها حسيت ان في حاجة اتغيرت جوايا .. حسيت إني بجد عايز أكون معاها إني حبقى سعيد جدا لو الامور مشت علي خير.. والحمد لله حصل وبقت نور دنيتي كلها وبدأت الخلافات .. خلافات كلها بسبب إن الموضوع كله لسه جديد علينا احنا الاتنين بس المشجع إننا كنا بنقدر نتجاوزها مع بعض والحمد لله فضلت ورايا لحد ما ربنا أنعم عليا وخلصني من التدخين في العيد الصغير اللي فات بعد محاولات طويلة جدا فاشلة زي ما يكون عايز يقولي إن ده ببركة وجودها في حياتك وعلي العيد الكبير أنا قررت إنه لازم أعمل حاجة كمان لازم أطور نفسي في حاجة تانية وقررت أتعلم برمجة وفي خلال حوالي 6 شهور قطعت طريق الحمد لله مش قليل وإن كان ممكن يكون أحسن بكثير بس ظروف الشغل كانت كتير بتعطلني وساعات كتير برضه ده مان بيخليني أقصر معاها في حاجات واتأخر علي مواعيدي معاها بس كان بيبقي غصب عني… والحمد لله نجحت في اني اخبى الموضوع لحد الوقت عشان كان نفسي افاجأها بيه عن طريق إن اول برنامج أعمله يكون ليها أقولها فيه إن موضوع النتنته اللي كان مضايقك ده كنت بحاول بيه أخلي الموضوع مفاجأه و الحمد لله أنا الوقت بقيت باخد أول خطوات ليا في المجال ده وكله بفضل الله ثم ببركة وجودك في حياتي .. بجد والله إنتي خلتيني انسان مختلف معندوش هم غير انه ياخد باله منك وإنه يطور نفسه للأحسن وعلي فكرة ده كله بجد أنا اتعلمته منك … إتعلمت منك إزاي أعرف أحب الناس أبقي عايز اسعدهم وإزاي يبقى عندي طموح أعمل بيه اللي أنا عاوزة والأهم من كل ده أنا اتعلمت منك إزاي أبقى إنسان … طبعا أنا لو قعدت أحكي عنك من هنا للسنة الجاية مش حيكفي ومستحيل أعرف الاقي كلام أشكرك بيه .. ربنا يجزيكي عني خير ويحفظك ويعينك عليا… بحبك… ملحوظة : كان كل ما تتخانقي معايا عشان بتأخر وكده أقولك بكرة تعرفي إنه عشانك … يا تري عرفتي؟؟</string>
</resources>